# gopay-python-api

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-test.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  utils.py
.github/workflows/: python-app.yml
examples/: create_payment.py  get_status.py
gopay/: __init__.py  api.py  enums.py  errors.py  gopay.py  http.py  models.py  oauth2.py  payments.py  services.py  utils.py
tests/: .sandbox.env  api_test.py  conftest.py  gopay_test.py  http_test.py  oauth2_test.py  payments_test.py  test_api.py  test_api_card.py  test_api_gopay_account.py  test_api_payment.py  test_api_preauthorization.py  test_api_qr_payment.py  test_api_recurrence.py  test_create_payment.py  test_doubles.py  test_gopay_account.py  test_http.py  test_payment.py  test_payments.py  test_preauthorization.py  test_recurrence.py  test_remote.py  test_services.py
tests/remote/: __init__.py  when_api_failed.py  when_api_succeed.py
tests/unit/: card_token_test.py  card_token_tests.py  common_method_test.py  common_method_tests.py  create_payment_test.py  create_payment_tests.py  eet_test.py  eet_tests.py  on_demand_payment_test.py  on_demand_payment_tests.py  preauthorization_test.py  preauthorization_tests.py  recurrent_payment_test.py  recurrent_payment_tests.py  refund_test.py  refund_tests.py  supercash_methods_test.py  supercash_methods_tests.py  utils.py
