[tool.poetry]
authors = ["GoPay <integrace@gopay.cz>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "GoPay's Python SDK for Payments REST API"
documentation = "https://doc.gopay.com"
homepage = "https://github.com/gopaycommunity/gopay-python-api"
keywords = ["gopay", "payments", "sdk", "rest", "api"]
license = "MIT"
name = "gopay"
packages = [{include = "gopay"}]
readme = "README.md"
repository = "https://github.com/gopaycommunity/gopay-python-api"
version = "2.0.0"

[tool.poetry.dependencies]
deprecated = "^1.2.14"
python = "^3.8.1"
requests = "^2.31.0"
pydantic = "^1.10.8"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
deprecated = "^1.2.14"
flake8 = "^6.0.0"
pyhamcrest = "^2.0.4"
unittest-data-provider = "^1.0.1"
pytest = "^7.3.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
